--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	}],
 	"require": {
 		"php": ">= 5.5",
-		"curl/curl": "^1.5"
+		"curl/curl": "^1.5",
+		"league/csv": "^8.2"
 	},
 	"autoload": {
 		"psr-4": {
